SUSTech/CS323/project/test/test_1/test_dCAGwiRh.spl
int test()
{
  int a, b = 01;
}